force-app/main/default/objects/Spreading_Definition__mdt/Spreading_Definition__mdt.object-meta.xml
<CustomObject>
    <description>Stable, packageable definitions for the spreading pilot: ratio labels, formula keys, normalized line names, material line categories, source document types, and scenario classifications.</description>
    <label>Spreading Definition</label>
    <pluralLabel>Spreading Definitions</pluralLabel>
</CustomObject>