force-app/main/default/objects/Spreading_Definition__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Ratio Label</fullName><default>false</default><label>Ratio Label</label></value>
            <value><fullName>Formula Key</fullName><default>false</default><label>Formula Key</label></value>
            <value><fullName>Normalized Line</fullName><default>false</default><label>Normalized Line</label></value>
            <value><fullName>Material Category</fullName><default>false</default><label>Material Category</label></value>
            <value><fullName>Source Document Type</fullName><default>false</default><label>Source Document Type</label></value>
            <value><fullName>Scenario Classification</fullName><default>false</default><label>Scenario Classification</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>